--- a/d00/ex01/mendeleiev.html
+++ b/d00/ex01/mendeleiev.html
@@ -80,7 +80,7 @@ img {
 
 </style>
 <body>
-	<table align="center">
+	<table align="center" contenteditable="true">
 	<tr>
 		<td class="diatomic-nonmetal">
 			<p id="atomic">1</p>
