--- a/d04/ex01/index.html
+++ b/d04/ex01/index.html
@@ -7,7 +7,7 @@
 	<title>Index</title>
 </head>
 <body>
-	<form action="index.php" method="POST">
+	<form action="create.php" method="POST">
 		Username: <input type="text" name="login" value=""/><br/>
 		Password: <input type="password" name="passwd" value=""/><br/>
 		<input type="submit" value="OK" name="submit"/>
